# google_sheets_reader_microservices

./: .gitignore  README.md  poetry.toml  pyproject.toml
gsheet/: server.py  settings.py  utils.py
gsheet/datalayer/data_layer/: settings.py
gsheet/datalayer/data_layer/models/: document.py
gsheet/datalayer/migrations/: env.py
gsheet/datalayer/migrations/versions/: adf30bf60be5_added_unique_constraints.py
