[tool.poetry]
name = "gsheetpython"
version = "0.1.0"
description = ""
authors = ["chidibede <chidibede@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
alembic = "^1.4.3"
sqlalchemy = "^1.3.19"
starlette = "^0.13.8"
psycopg2-binary = "^2.8.6"
uvicorn = "^0.12.1"
gspread = "^3.6.0"
oauth2client = "^4.1.3"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
